# schulze

./: Main.hs  schulze.cabal  test.txt
