name:          schulze
version:       1.0.0
cabal-version: >= 1.10
build-type:    Simple

executable schulze
    main-is: Main.hs
    default-language: Haskell2010
    hs-source-dirs:   .
    ghc-options:      -Wall -O2

    default-extensions:
        CPP
        DeriveDataTypeable
        EmptyDataDecls
        FlexibleContexts
        GADTs
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        NoImplicitPrelude
        NoMonomorphismRestriction
        OverloadedStrings
        QuasiQuotes
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        TemplateHaskell
        TupleSections
        TypeFamilies
        UnicodeSyntax
        ViewPatterns

    build-depends:
          base >= 4 && < 5
        , base-unicode-symbols
        , conduit
        , containers
        , data-default
        , monads-tf
        , text

